Fix title colour in dark mode (again)

--- a/src/components/Embed/styles.scss
+++ b/src/components/Embed/styles.scss
@@ -3,7 +3,7 @@
 .embed {
   font-family: $font-sans;
   font-size: 1rem;
-  color: rgb(17, 17, 17);
+  color: rgb(17, 17, 17) !important;
   padding: 15px;
   width: 100%;
   display: flex;
